--- a/views/onepart.ejs
+++ b/views/onepart.ejs
@@ -9,7 +9,7 @@
       </div>
 
       <div class="submit-btn">
-        <button type="submit" class="btn btn-primary">👉 Next Joke</button>
+        <button type="submit" class="btn btn-primary joke-btn">👉 Next Joke</button>
       </div>
 
     </form>
