Added more joke categories

--- a/views/onepart.ejs
+++ b/views/onepart.ejs
@@ -5,6 +5,7 @@
     <form action="/" method="post">
       <div>
         <h1>One Part Joke</h1>
+        <h1>Category: <%= category %></h1>
         <h2>"<%= joke %>"</h2>
       </div>
 
