--- a/views/twopart.ejs
+++ b/views/twopart.ejs
@@ -5,6 +5,7 @@
     <form action="/" method="post">
       <div>
         <h1>Two Part Joke</h1>
+        <h1>Category: <%= category %></h1>
         <h2>'<%= setup %>'</h2>
         <h2>'<%= delivery %>'</h2>
       </div>
